--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,16 +1,21 @@
-html,
-body {
-  padding: 0;
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
-* {
-  box-sizing: border-box;
+li {
+  list-style-type: none;
+}
+
+body {
+  font-family: 'roboto', sans-serif;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
 }
