--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,3 +1,10 @@
+:root {
+  --title-color: #212353;
+  --primary-color: #e96da5;
+  --secondary-color: #84888b;
+}
+
+
 * {
   margin: 0;
   padding: 0;
